Fixed issue with office phone and attempting to fix contact form layout problem

--- a/src/www.arragro.com/wwwroot/css/site.scss
+++ b/src/www.arragro.com/wwwroot/css/site.scss
@@ -619,7 +619,7 @@ header#standardHeader {
         }
 
         .contact-details {
-            height: 50%;
+            height: auto;
 
             .location, .contact-details {
                 width: 100%;
